--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
 
         <form class="row">
             <div class="row mb-3 mt-4 fs-5">
-                <label class="col-sm-2 col-form-label">Email Address</label>
-                <div class="col-sm-10">
+                <label class="col-lg-2 col-med-2 col-sm-2 col-form-label">Email Address</label>
+                <div class="col-lg-10 col-md-10 col-sm-10">
                     <input type="email" id="email" class="form-control">
                 </div>
 
             </div>
             <div class="row mb-3 mt-3 fs-5">
-                <label class="col-sm-2 col-form-label">First Name</label>
-                <div class="col-sm-10">
+                <label class="col-lg-2 col-med-2 col-sm-2 col-form-label">First Name</label>
+                <div class="col-lg-10 col-md-10 col-sm-10">
                     <input type="text" id="firstName" class="form-control">
                 </div>
             </div>
 
             <div class="row mb-3 mt-3 fs-5">
-                <label class="col-sm-2 col-form-label">Last Name</label>
-                <div class="col-sm-10">
+                <label class="col-lg-2 col-med-2 col-sm-2 col-form-label">Last Name</label>
+                <div class="col-lg-10 col-md-10 col-sm-10">
                     <input type="text" id="lastName" class="form-control">
                 </div>
             </div>
             <fieldset class="row mb-3 mt-3 fs-5">
-                <legend class="col-form-label col-sm-2">Collection Preference</legend>
-                <div class="col-sm-10">
+                <legend class="col-form-label col-lg-2 col-med-2 col-sm-2">Collection Preference</legend>
+                <div class="col-lg-10 col-md-10 col-sm-10">
                     <div class="btn-group d-flex" role="group" aria-label="Basic radio toggle button group"
                         id="radiobuttons">
                         <input type="radio" class="btn-check" name="btnradio" id="forHim" autocomplete="off">
