--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                 </div>
 
             </div>
+
             <div class="row mb-3 mt-3 fs-5">
                 <div class="col-lg-2 col-med-2 col-sm-2">
                     <label class="col-form-label">First Name</label>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-10">
-                    <input type="text" id="firstName" class="form-control">
+                    <input type="text" id="firstName" class="form-control" required>
                 </div>
             </div>
 
@@ -40,6 +41,16 @@
                     <input type="text" id="lastName" class="form-control">
                 </div>
             </div>
+
+            <div class="row mb-3 mt-3 fs-5">
+                <div class="col-lg-2 col-med-2 col-sm-2">
+                    <label class="col-form-label">Mobile Number</label>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-10">
+                    <input type="text" id="mobileNumber" class="form-control">
+                </div>
+            </div>
+
             <fieldset class="row mb-3 mt-3 fs-5">
                 <div class="col-lg-2 col-med-2 col-sm-2">
                     <legend class="col-form-label">Collection Preference</legend>
