--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
                     <legend class="col-form-label">Collection Preference</legend>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-10">
-                    <div class="btn-group d-flex" role="group" aria-label="Basic radio toggle button group"
+                    <div class="bs-btn-group d-flex" role="group" aria-label="Basic radio toggle button group"
                         id="radiobuttons">
-                        <input type="radio" class="btn-check" name="preference" id="forHim" value="forHim"
+                        <input type="radio" class="bs-btn-check" name="preference" id="forHim" value="forHim"
                             autocomplete="off">
-                        <label class="btn btn-outline-primary" for="forHim">For Him</label>
+                        <label class="bs-btn bs-btn-outline-primary" for="forHim">For Him</label>
 
-                        <input type="radio" class="btn-check" name="preference" id="forHer" value="forHer"
+                        <input type="radio" class="bs-btn-check" name="preference" id="forHer" value="forHer"
                             autocomplete="off">
-                        <label class="btn btn-outline-primary" for="forHer">For Her</label>
+                        <label class="bs-btn bs-btn-outline-primary" for="forHer">For Her</label>
 
-                        <input type="radio" class="btn-check" name="preference" id="both" value="both"
+                        <input type="radio" class="bs-btn-check" name="preference" id="both" value="both"
                             autocomplete="off" checked>
-                        <label class="btn btn-outline-primary" for="both">Both</label>
+                        <label class="bs-btn bs-btn-outline-primary" for="both">Both</label>
                     </div>
                 </div>
             </fieldset>
 
             <div class="text-center mt-5">
-                <button type="submit" class="btn btn-primary fs-5">Submit</button>
+                <button type="submit" class="bs-btn bs-btn-primary fs-5">Submit</button>
             </div>
             <div class="row mb-3 mt-3 fs-5">
                 <div class="col-lg-2 col-med-2 col-sm-2">
